# sheffybot

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/plugins/application/: __init__.py
src/plugins/pcr/: __init__.py  config.py  logger.py  matcher.py  models.py  utils.py
src/plugins/pcr/models/: __init__.py  chara_model.py  gacha_model.py  guess_model.py  update_model.py  whois_model.py
src/plugins/pcr/plugins/: pcr_calendar.py  pcr_gacha.py  pcr_portune.py  pcr_query.py  pcr_sign.py  pcr_update.py  pcr_whois.py  pcr_wiki.py
src/plugins/pcr/plugins/pcr_gacha/: __init_.py  config.py
src/plugins/pcr/plugins/pcr_guess/: __init__.py  avatar_guess.py  card_guess.py  config.py  desc_guess.py
src/plugins/pcr/plugins/pcr_portune/: __init__.py  config.py
src/plugins/pcr/plugins/pcr_update/: __init__.py  config.py
src/plugins/pcr/plugins/pcr_whois/: __init__.py  config.py
src/plugins/pcr/resources/portune/: luck_type.json
src/plugins/pcr/resources/query/gocha/: route.json
src/plugins/pcr/services/: __init__.py  calendar_service.py  data_service.py  gacha_service.py  guess_service.py  portune_service.py  query_service.py  update_service.py  whois_service.py  wiki_service.py
src/plugins/pcr/services/data_service/: __init__.py  chara_data_service.py  pcr_data_service.py  util.py
src/plugins/pcr/services/internal/: data_service.py
src/plugins/pcr/services/sign_service/: __init__.py  base.py
