[project]
name = "sheffybot"
version = "0.1.1"
description = "sheffybot"
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [{ name = "liangzimiao", email = "2968274386@qq.com" }]
license = { text = "GPL-3.0" }
dependencies = [
    "nonebot2[fastapi,httpx,websockets]<3.0.0,>=2.0.1",
    "nonebot-adapter-qq>=1.1.0",
    "nonebot-adapter-onebot>=2.3.1",
    "nonebot-plugin-alconna>=0.33.6",
    "nonebot-plugin-apscheduler<1.0.0,>=0.3.0",
    "nonebot-plugin-session>=0.2.3",
    "nonebot-plugin-send-anything-anywhere>=0.5.0",
    "nonebot-plugin-userinfo>=0.2.2",
    "nonebot-plugin-picstatus>=1.1.1",
]


[project.optional-dependencies]
PCR = [
    "requests<3.0.0,>=2.31.0",
    "pillow>=10.2.0",
    "pytz>=2023.3.post1",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.23.0",
    "zhconv>=1.4.3",
    "aiohttp>=3.9.3",
]


[tool.nonebot]
adapters = [
    { name = "QQ", module_name = "nonebot.adapters.qq" },
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = [
    "nonebot_plugin_apscheduler",
    "nonebot_plugin_alconna",
    "nonebot_plugin_session",
    "nonebot_plugin_saa",
    "nonebot_plugin_userinfo",
    "nonebot_plugin_picstatus",
]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]


[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
test = [
    "nonebug>=0.3.6",
    "pytest-asyncio>=0.23.5.post1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
